# MLops

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
notebooks/: test_data.ipynb
src/project_mlops/: data.py  evaluate.py  iris_classifier.py  iris_train.py  main.py  model.py  train.py  visualize.py
