[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "project_mlops"
version = "0.0.1"
description = "project repo for DTU course MLOPS"
authors = [
  { name = "Holger Max Fl\u00f8e Lyng", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "gdown>=5.2.0",
    "invoke>=2.2.0",
    "pathlib>=1.0.1",
    "pytest>=8.3.4",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "typer==0.15.1",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "mypy>=1.19.1",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[project.scripts]
train   = "project_mlops.train:train"
eval  = "project_mlops.evaluate:main"
main = "project_mlops.main:main"
preprocess  = "project_mlops.data:main"
visualize  = "project_mlops.visualize:main"
iris_clas       = "project_mlops.iris_classifier:train"
iris       = "project_mlops.iris_train:app"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
lint.select = ["I" , "D"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff.lint.pydocstyle]
convention = "google"

